# pg8000

./: .bzrignore  .gitattributes  .gitignore  .hgignore  .travis.yml  CHANGELOG  Dockerfile-test-env  LICENSE  MANIFEST.in  README.adoc  README.creole  README.md  README.rst  akiban_demo.py  circle.yml  circleci.yml  copy_example.py  dev_tasks.txt  example.py  ez_setup.py  libpq.py  multi  notify_example.py  pg8000-dbapi-test.py  pg8000-test.py  pg8000.py  pg8000_dbapi.py  pg8000_test.py  protocol-test.py  protocol.py  pyproject.toml  run_25  run_25.py  run_25_cache.py  run_tests.py  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: test.yml
circleci/: install-jython-2.5.3.sh  install-jython-2.7.0.sh  install-jython-2.7.1.sh  install-postgresql-9.0.18.sh  install-postgresql-9.1.14.sh  install-postgresql-9.1.20.sh  install-postgresql-9.1.22.sh  install-postgresql-9.2.15.sh  install-postgresql-9.2.17.sh  install-postgresql-9.2.9.sh  install-postgresql-9.3.11.sh  install-postgresql-9.3.13.sh  install-postgresql-9.3.5.sh  install-postgresql-9.4.0.sh  install-postgresql-9.4.6.sh  install-postgresql-9.4.8.sh  install-postgresql-9.4beta2.sh  install-postgresql-9.5.0.sh  install-postgresql-9.5.1.sh  install-postgresql-9.5.3.sh  install-postgresql-generic.sh  install-pypy-2.4.0.sh  install-pypy3-2.3.1.sh  install-pypy3.3-5.5.sh  install-pypy3.5-6.0.sh  install-python-2.5.6.sh  install-python-2.6.9.sh  install-python-2.7.8.sh  install-python-2.7.9.sh  install-python-3.2.5.sh  install-python-3.3.5.sh  install-python-3.4.1.sh  install-python-3.4.2.sh  install-python-3.5.1.sh  run-postgres-and-tox.sh
doc/: Makefile  changelog.rst  conf.py  dbapi.rst  errors.rst  index.rst  interactiveexample.rst  quickstart.rst  release_notes.rst  types.rst
doc/.templates/: layout.html
docs/: dbapi2_docs.rst  native_api_docs.rst  release_notes.rst
pg8000/: __init__.py  _version.py  converters.py  core.py  dbapi.py  errors.py  exceptions.py  interface.py  legacy.py  native.py  pg8000_types.py  pg_scram.py  protocol.py  six.py  types.py  util.py
pg8000/ext/: akiban.py
pg8000/tests/: connection_settings.py  dbapi20.py  performance.py  test_connection.py  test_copy.py  test_dbapi.py  test_error_recovery.py  test_paramstyle.py  test_pg8000_dbapi20.py  test_query.py  test_typeconversion.py  test_typeobjects.py
pg8000/tests/tests_1_8/: connection_settings.py  test_connection.py  test_dbapi.py  test_error_recovery.py  test_paramstyle.py  test_pg8000_dbapi20.py  test_query.py  test_typeconversion.py  test_typeobjects.py
postgres_test_server/: run-test-server.sh
postgres_test_server/init-scripts/: pg8000-init.sh  pg8000-init.sql
src/pg8000/: __init__.py  converters.py  core.py  dbapi.py  legacy.py  native.py
test/: conftest.py  stress.py  test_connection.py  test_converters.py  test_copy.py  test_dbapi.py  test_dbapi20.py  test_error_recovery.py  test_query.py  test_readme.py  test_typeconversion.py  test_typeobjects.py  test_types.py  test_utils.py  utils.py
test/dbapi/: conftest.py  test_adapters.py  test_auth.py  test_benchmarks.py  test_connection.py  test_copy.py  test_dbapi.py  test_dbapi20.py  test_error_recovery.py  test_paramstyle.py  test_query.py  test_typeconversion.py
test/dbapi/auth/: test_gss.py  test_md5.py  test_md5_ssl.py  test_password.py  test_scram-sha-256.py  test_scram-sha-256_ssl.py
test/dbapi/github-actions/: gss_dbapi.py  md5.py  password_dbapi.py  scram-sha-256_dbapi.py  ssl_dbapi.py
test/legacy/: conftest.py  test_auth.py  test_connection.py  test_copy.py  test_dbapi.py  test_dbapi20.py  test_error_recovery.py  test_paramstyle.py  test_prepared_statement.py  test_query.py  test_typeconversion.py
test/legacy/auth/: test_gss.py  test_md5_ssl.py  test_scram-sha-256_ssl.py
test/legacy/github-actions/: gss_legacy.py  password_legacy.py  ssl_legacy.py
test/native/: conftest.py  stress.py  test_auth.py  test_benchmarks.py  test_connection.py  test_converters.py  test_copy.py  test_core.py  test_dbapi.py  test_error_recovery.py  test_import_all.py  test_prepared_statement.py  test_query.py  test_typeconversion.py
test/native/auth/: test_gss.py  test_md5.py  test_md5_ssl.py  test_scram-sha-256.py  test_scram-sha-256_ssl.py
test/native/github-actions/: scram-sha-256_native.py  ssl_native.py
test/postgres_server/: run_test_server.sh
test/postgres_server/init_scripts/: pg8000-init.sh  pg8000-init.sql
tests/: all.py  conftest.py  connection.py  connection_settings.py  copy.py  dbapi.py  dbapi20.py  error_recovery.py  paramstyle.py  performance.py  pg8000_dbapi20.py  query.py  stress.py  test_connection.py  test_copy.py  test_dbapi.py  test_dbapi20.py  test_error_recovery.py  test_paramstyle.py  test_pg8000_dbapi20.py  test_query.py  test_scram.py  test_typeconversion.py  test_types.py  typeconversion.py  typeobjects.py
