[metadata]
name = pg8000
author = Mathieu Fenniak And Contributors
description = PostgreSQL interface library
long_description = pg8000
    ------

    pg8000 is a Pure-Python interface to the PostgreSQL database engine.  It is
    one of many PostgreSQL interfaces for the Python programming language. pg8000
    is somewhat distinctive in that it is written entirely in Python and does not
    rely on any external libraries (such as a compiled python module, or
    PostgreSQL's libpq library). pg8000 supports the standard Python DB-API
    version 2.0.

    pg8000's name comes from the belief that it is probably about the 8000th
    PostgreSQL interface for Python.
url = https://github.com/tlocke/pg8000
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries :: Python Modules
keywords= postgresql dbapi

[options]
python_requires = >=3.7
install_requires =
    scramp>=1.4.1
    importlib-metadata >= 1.0 ; python_version < "3.8"
packages = pg8000

[flake8]
application-names = pg8000
ignore = E203,W503
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv,.tox
application-import-names = pg8000
